# NEW-ROBOT

./: .gitignore  README.md
RFSN-ROBOT-NEW-main/: .gitignore  CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  V12.1_README.md  panda_table_cube.xml  pyproject.toml  pytest.ini  requirements.txt  run_pick_turn_place.py  test_evaluation_validation.py  test_grasp_quality.py  test_gripper_validation.py  test_ik_validation.py  test_integration.py  test_orientation_ik.py  test_rfsn_suite.py  test_safety_fixes.py  test_safety_learning_validation.py  test_v12_verification.py  test_v5_upgrades.py  test_v8_bug_fixes.py  test_v8_upgrades.py  train_rl.py
RFSN-ROBOT-NEW-main/.github/workflows/: ci.yml
RFSN-ROBOT-NEW-main/demos/: arm_visual_demo.html  mujoco_arm_demo.py  rl_policy_demo.py
RFSN-ROBOT-NEW-main/docs/: V12.1_UPGRADE_SUMMARY.md
RFSN-ROBOT-NEW-main/rfsn/: __init__.py  decision.py  harness.py  harness_v2.py  modes.py  mpc_receding.py  mujoco_utils.py  pipeline.py  ship_gate.py  state_machine.py  targets.py
RFSN-ROBOT-NEW-main/rfsn/perception/: contact_utils.py
RFSN-ROBOT-NEW-main/rfsn/rl/: env_wrapper.py  recurrent_ppo.py
RFSN-ROBOT-NEW-main/rfsn/schema/: contact_summary.py
RFSN-ROBOT-NEW-main/scripts/: smoke.py
RFSN-ROBOT-NEW-main/tests/: test_ship_gate.py
